# sectorETF

./: README.md  debug_env.py  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: sector-etf-daily.yml
